<resources>
    <string name="app_name">EmployeeService</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login_page">LoginPage</string>

    <string name="signed_in_fmt">%s</string>
    <string name="mail_id">%s</string>
    <string name="mail_photo">%s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out"></string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>
    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>
    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>
    <string name="first_name">First Name : </string>
    <string name="last_name">Last Name : </string>
    <string name="email_text">Email : </string>
    <string name="select_organisation">Organisation : </string>
    <string name="server_client_id">49283713526-hpqu57eokqoulibb7trmsjfi8hd5h08c.apps.googleusercontent.com</string>
    <string name="title_activity_employee_creation">EmployeeCreationActivity</string>
    <string name="enter_person_details">Enter Person Details :</string>
    <string name="gender">Gender : </string>
    <string name="mobile_no_text">Mobile No : </string>
    <string name="view_employee_list">View</string>
    <string name="save_employees">Save</string>
    <string name="title_activity_view_employee">ViewEmployeeActivity</string>

</resources>
